[package]
name = "aoc2019-rust"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/aoc/lib.rs"

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[[bin]]
name = "d01p2"
path = "src/days/d01p2.rs"

[[bin]]
name = "d02p1"
path = "src/days/d02p1.rs"

[[bin]]
name = "d02p2"
path = "src/days/d02p2.rs"

[[bin]]
name = "d04p1"
path = "src/days/d04p1.rs"

[[bin]]
name = "d04p2"
path = "src/days/d04p2.rs"

[[bin]]
name = "d16p1"
path = "src/days/d16p1.rs"

[[bin]]
name = "d16p2"
path = "src/days/d16p2.rs"

[dependencies]
clap = "2.33.0"
itertools = "0.8.2"
