[package]
name = "aoc2019-rust"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/aoc/lib.rs"

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[[bin]]
name = "d01p2"
path = "src/days/d01p2.rs"

[[bin]]
name = "d02p1"
path = "src/days/d02p1.rs"

[[bin]]
name = "d02p2"
path = "src/days/d02p2.rs"

[[bin]]
name = "d04p1"
path = "src/days/d04p1.rs"

[[bin]]
name = "d04p2"
path = "src/days/d04p2.rs"

[[bin]]
name = "d05p1"
path = "src/days/d05p1.rs"

[[bin]]
name = "d05p2"
path = "src/days/d05p2.rs"

[[bin]]
name = "d07p1"
path = "src/days/d07p1.rs"

[[bin]]
name = "d07p2"
path = "src/days/d07p2.rs"

[[bin]]
name = "d09p1"
path = "src/days/d09p1.rs"

[[bin]]
name = "d09p2"
path = "src/days/d09p2.rs"

[[bin]]
name = "d11p1"
path = "src/days/d11p1.rs"

[[bin]]
name = "d11p2"
path = "src/days/d11p2.rs"

[[bin]]
name = "d13p1"
path = "src/days/d13p1.rs"

[[bin]]
name = "d13p2"
path = "src/days/d13p2.rs"

[[bin]]
name = "d16p1"
path = "src/days/d16p1.rs"

[[bin]]
name = "d16p2"
path = "src/days/d16p2.rs"

[[bin]]
name = "d19p1"
path = "src/days/d19p1.rs"

[dependencies]
aoc-utils = "0.2.1"
itertools = "0.9.0"
maplit = "1.0.2"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
